# ibim-levelset

./: .gitignore  CMakeLists.txt  CMakeLists_noview.txt  CMakefile_noview.txt  Config.cpp  Config.h  README.md  bbfmm.cpp  bbfmm.h  blas_wraper.cpp  blas_wraper.h  electric.cpp  electric.h  gmres.cpp  gmres.h  levelset.cpp  levelset.h  linalg.h  ls_point.h  main.cpp  molecule.h  point.h  utils.h  view.cpp  view.h
data/: 1a2b.pqr  1a2k.pqr  1a63.pqr  1aa2.pqr  1f15.pqr  1hje.pqr  1k8h.pqr  1ppe.pqr  2aid.pqr  4ins.pqr  6rxn.pqr  ball.pqr  input.cfg  result_1a2b.txt  result_1a2k.txt  result_1a63.txt  result_1f15.txt  result_1hje.txt  result_2aid.txt  result_4ins.txt  result_ball.txt  result_twoball.txt  test.pqr  twoball.pqr
